--- a/apps/api/src/api/applicant/documentation/1.0.0/applicant.json
+++ b/apps/api/src/api/applicant/documentation/1.0.0/applicant.json
@@ -63,9 +63,7 @@
           }
         }
       },
-      "tags": [
-        "Applicant"
-      ],
+      "tags": ["Applicant"],
       "parameters": [
         {
           "name": "sort",
@@ -235,9 +233,7 @@
           }
         }
       },
-      "tags": [
-        "Applicant"
-      ],
+      "tags": ["Applicant"],
       "parameters": [],
       "operationId": "post/applicants",
       "requestBody": {
@@ -316,9 +312,7 @@
           }
         }
       },
-      "tags": [
-        "Applicant"
-      ],
+      "tags": ["Applicant"],
       "parameters": [
         {
           "name": "id",
@@ -396,9 +390,7 @@
           }
         }
       },
-      "tags": [
-        "Applicant"
-      ],
+      "tags": ["Applicant"],
       "parameters": [
         {
           "name": "id",
@@ -487,9 +479,7 @@
           }
         }
       },
-      "tags": [
-        "Applicant"
-      ],
+      "tags": ["Applicant"],
       "parameters": [
         {
           "name": "id",
