--- a/apps/api/src/api/course-application/documentation/1.0.0/course-application.json
+++ b/apps/api/src/api/course-application/documentation/1.0.0/course-application.json
@@ -63,9 +63,7 @@
           }
         }
       },
-      "tags": [
-        "Course-application"
-      ],
+      "tags": ["Course-application"],
       "parameters": [
         {
           "name": "sort",
@@ -235,9 +233,7 @@
           }
         }
       },
-      "tags": [
-        "Course-application"
-      ],
+      "tags": ["Course-application"],
       "parameters": [],
       "operationId": "post/course-applications",
       "requestBody": {
@@ -316,9 +312,7 @@
           }
         }
       },
-      "tags": [
-        "Course-application"
-      ],
+      "tags": ["Course-application"],
       "parameters": [
         {
           "name": "id",
@@ -396,9 +390,7 @@
           }
         }
       },
-      "tags": [
-        "Course-application"
-      ],
+      "tags": ["Course-application"],
       "parameters": [
         {
           "name": "id",
@@ -487,9 +479,7 @@
           }
         }
       },
-      "tags": [
-        "Course-application"
-      ],
+      "tags": ["Course-application"],
       "parameters": [
         {
           "name": "id",
