--- a/apps/api/src/api/applicant/documentation/1.0.0/applicant.json
+++ b/apps/api/src/api/applicant/documentation/1.0.0/applicant.json
@@ -63,7 +63,9 @@
           }
         }
       },
-      "tags": ["Applicant"],
+      "tags": [
+        "Applicant"
+      ],
       "parameters": [
         {
           "name": "sort",
@@ -233,7 +235,9 @@
           }
         }
       },
-      "tags": ["Applicant"],
+      "tags": [
+        "Applicant"
+      ],
       "parameters": [],
       "operationId": "post/applicants",
       "requestBody": {
@@ -312,7 +316,9 @@
           }
         }
       },
-      "tags": ["Applicant"],
+      "tags": [
+        "Applicant"
+      ],
       "parameters": [
         {
           "name": "id",
@@ -390,7 +396,9 @@
           }
         }
       },
-      "tags": ["Applicant"],
+      "tags": [
+        "Applicant"
+      ],
       "parameters": [
         {
           "name": "id",
@@ -479,7 +487,9 @@
           }
         }
       },
-      "tags": ["Applicant"],
+      "tags": [
+        "Applicant"
+      ],
       "parameters": [
         {
           "name": "id",
