--- a/apps/api/src/api/course-application/documentation/1.0.0/course-application.json
+++ b/apps/api/src/api/course-application/documentation/1.0.0/course-application.json
@@ -63,7 +63,9 @@
           }
         }
       },
-      "tags": ["Course-application"],
+      "tags": [
+        "Course-application"
+      ],
       "parameters": [
         {
           "name": "sort",
@@ -233,7 +235,9 @@
           }
         }
       },
-      "tags": ["Course-application"],
+      "tags": [
+        "Course-application"
+      ],
       "parameters": [],
       "operationId": "post/course-applications",
       "requestBody": {
@@ -312,7 +316,9 @@
           }
         }
       },
-      "tags": ["Course-application"],
+      "tags": [
+        "Course-application"
+      ],
       "parameters": [
         {
           "name": "id",
@@ -390,7 +396,9 @@
           }
         }
       },
-      "tags": ["Course-application"],
+      "tags": [
+        "Course-application"
+      ],
       "parameters": [
         {
           "name": "id",
@@ -479,7 +487,9 @@
           }
         }
       },
-      "tags": ["Course-application"],
+      "tags": [
+        "Course-application"
+      ],
       "parameters": [
         {
           "name": "id",
