--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@strapi/blocks-react-renderer": "^1.0.1",
     "@tanstack/react-query": "^5.56.2",
     "@tanstack/react-query-devtools": "^5.56.2",
+    "@tinymce/tinymce-react": "^5.1.1",
     "@uppy/compressor": "^2.1.0",
     "@uppy/core": "^4.2.0",
     "@uppy/dashboard": "^4.1.0",
