--- a/package.json
+++ b/package.json
@@ -128,6 +128,7 @@
     "@types/pluralize": "^0.0.33",
     "@types/react": "18.3.11",
     "@types/react-dom": "18.3.0",
+    "@types/react-dropzone": "^5.1.0",
     "@types/react-headroom": "^3.2.3",
     "@types/remove-markdown": "^0.3.4",
     "@types/string-similarity": "^4.0.2",
