--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@chakra-ui/next-js": "^2.2.0",
     "@chakra-ui/react": "^2.8.2",
     "@ctrl/tinycolor": "^4.1.0",
+    "@date-fns/tz": "^1.1.2",
     "@ducanh2912/next-pwa": "^10.2.9",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
@@ -56,8 +57,7 @@
     "axios": "^1.7.7",
     "chakra-react-select": "4.9.2",
     "cookies-next": "^4.2.1",
-    "date-fns": "^3.6.0",
-    "date-fns-tz": "^3.1.3",
+    "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
     "framer-motion": "^11.3.31",
     "i18n-help": "^0.1.4",
