--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -33,6 +33,7 @@
     "@strapi/strapi": "^4.25.13",
     "apify-client": "^2.9.7",
     "cheerio": "^1.0.0",
+    "date-fns": "^4.1.0",
     "pg": "^8.13.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
